animation - fix on mobile ?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1339,6 +1339,20 @@ input, select, textarea {
 		93% {backdrop-filter: brightness(1);}
 		100% {backdrop-filter: brightness(1);}
 	}
+	@-webkit-keyframes lightning {
+		0% {-webkit-backdrop-filter: brightness(1);}
+		49% {-webkit-backdrop-filter: brightness(1);}
+		50% {-webkit-backdrop-filter: brightness(3);}
+		51% {-webkit-backdrop-filter: brightness(1);}
+		85% {-webkit-backdrop-filter: brightness(1);}
+		86% {-webkit-backdrop-filter: brightness(3);}
+		87% {-webkit-backdrop-filter: brightness(1);}
+		88% {-webkit-backdrop-filter: brightness(1);}
+		89% {-webkit-backdrop-filter: brightness(3);}
+		93% {-webkit-backdrop-filter: brightness(1);}
+		100% {-webkit-backdrop-filter: brightness(1);}
+	}
+
 	/* ^^^ spooky stuff - remove after Halloween ^^^ */
 
 
